# ten-four

./: Cargo.toml  LICENSE  README.md
src/: audio.rs  daemon.rs  inject.rs  ipc.rs  main.rs  transcribe.rs
