[package]
name = "ten-four"
version = "0.1.0"
edition = "2021"
description = "A push-to-talk speech-to-text daemon for Linux, powered by whisper.cpp"
license = "MIT"

[[bin]]
name = "ten-four"
path = "src/main.rs"

[dependencies]
cpal = "0.15"
hound = "3.5"
whisper-rs = "0.11"
tempfile = "3"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
ctrlc = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true